Add processor tests

--- a/modules/core/arrow-annotations-processor/build.gradle
+++ b/modules/core/arrow-annotations-processor/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     testCompile files(toolsJar)
 }
 
+test.dependsOn(':arrow-annotations-processor-test-models:kaptGenerateStubsKotlin')
+
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
