--- a/modules/effects/arrow-effects-reactor/build.gradle
+++ b/modules/effects/arrow-effects-reactor/build.gradle
@@ -7,7 +7,10 @@ dependencies {
     kaptTest project(':arrow-annotations-processor')
     compileOnly project(':arrow-annotations-processor')
     testCompileOnly project(':arrow-annotations-processor')
-    testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
+    testCompile "io.kotlintest:kotlintest-core:$kotlinTestVersion"
+    testCompile "io.kotlintest:kotlintest-assertions:$kotlinTestVersion"
+    testCompile "io.kotlintest:kotlintest-assertions-arrow:$kotlinTestVersion"
+    testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
 
     compile "io.projectreactor:reactor-core:3.1.3.RELEASE"
