--- a/modules/core/arrow-annotations-processor/build.gradle
+++ b/modules/core/arrow-annotations-processor/build.gradle
@@ -12,15 +12,13 @@ dependencies {
 
     //To generate stubs for data classes
     kaptTest 'com.google.auto.service:auto-service:1.0-rc4'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "com.google.testing.compile:compile-testing:0.15"
     testCompile fileTree(dir: './src/test/libs', includes: ['*.jar'])
     testCompile project(":arrow-data")
     testCompile project(":arrow-annotations-processor-test-models")
     testCompile project(":arrow-optics")
-    testCompile "io.kotlintest:kotlintest-core:$kotlinTestVersion"
-    testCompile "io.kotlintest:kotlintest-assertions:$kotlinTestVersion"
-    testCompile "io.kotlintest:kotlintest-assertions-arrow:$kotlinTestVersion"
+    testCompile("junit:junit:$jUnitVersion")
+    testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     def toolsJar = Jvm.current().getToolsJar()
 
