--- a/modules/optics/arrow-optics/build.gradle
+++ b/modules/optics/arrow-optics/build.gradle
@@ -1,10 +1,10 @@
+
 dependencies {
     compile project(':arrow-data')
     compile project(':arrow-instances-data')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    testCompile "io.kotlintest:kotlintest-core:$kotlinTestVersion"
-    testCompile "io.kotlintest:kotlintest-assertions:$kotlinTestVersion"
-    testCompile "io.kotlintest:kotlintest-assertions-arrow:$kotlinTestVersion"
+    testCompile("junit:junit:$jUnitVersion")
+    testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
 
