--- a/modules/recursion-schemes/arrow-recursion/build.gradle
+++ b/modules/recursion-schemes/arrow-recursion/build.gradle
@@ -1,3 +1,4 @@
+
 dependencies {
     compile project(':arrow-instances-data')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
@@ -6,9 +7,8 @@ dependencies {
     kaptTest project(':arrow-annotations-processor')
     compileOnly project(':arrow-annotations-processor')
     testCompileOnly project(':arrow-annotations-processor')
-    testCompile "io.kotlintest:kotlintest-core:$kotlinTestVersion"
-    testCompile "io.kotlintest:kotlintest-assertions:$kotlinTestVersion"
-    testCompile "io.kotlintest:kotlintest-assertions-arrow:$kotlinTestVersion"
+    testCompile("junit:junit:$jUnitVersion")
+    testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
 }
