--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -34,6 +34,9 @@ options:
       - title: Monad Comprehensions
         url: /docs/patterns/monad_comprehensions/
 
+      - title: Typeclass Polymorphism
+        url: /docs/patterns/typeclass_polymorphism/
+
       - title: Free Algebras
         url: /docs/patterns/free_algebras/
 
