Adding short descriptions for Bifunctor and Profunctor

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -198,6 +198,9 @@ options:
       - title: Bifunctor
         url: /docs/typeclasses/bifunctor
 
+      - title: Profunctor
+        url: /docs/typeclasses/profunctor
+
       - title: SemigroupK
         url: /docs/typeclasses/semigroupk/
 
