--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,9 @@ buildscript {
         gradleVersionsPluginVersion = '0.17.0'
         javaVersion = JavaVersion.VERSION_1_7
         kotlinTestVersion = '2.0.7'
-        kotlinVersion = '1.2.51'
+        kotlinVersion = '1.3-M2'
         daggerVersion = '2.15'
-        kotlinxCoroutinesVersion = '0.23.3'
+        kotlinxCoroutinesVersion = '0.25.0'
         kotlinxCollectionsImmutableVersion = '0.1'
         kotlinPoetVersion='1.0.0-RC1'
     }
