Adds placeholder doc for Category typeclass

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -219,6 +219,9 @@ options:
       - title: Alternative
         url: /docs/typeclasses/alternative/
 
+      - title: Category
+        url: /docs/typeclasses/category/
+
   - title: Effects
 
     nested_options:
