--- a/modules/core/arrow-annotations-processor/build.gradle
+++ b/modules/core/arrow-annotations-processor/build.gradle
@@ -3,6 +3,10 @@ import org.gradle.internal.jvm.Jvm
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
+ext {
+    metaArrowVersion = '0.7.3'
+}
+
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     compile "com.squareup:kotlinpoet:$kotlinPoetVersion"
@@ -11,8 +15,11 @@ dependencies {
     compile 'com.squareup:kotlinpoet:1.0.0-RC1'
     compile 'com.github.aballano:MnemoniK:1.0.0'
     compileOnly 'com.google.auto.service:auto-service:1.0-rc4'
-    compileOnly 'io.arrow-kt:arrow-instances-data:0.7.2'
+    compileOnly "io.arrow-kt:arrow-instances-data:$metaArrowVersion"
+    compileOnly "io.arrow-kt:arrow-recursion:$metaArrowVersion"
+    compileOnly "io.arrow-kt:arrow-optics:$metaArrowVersion"
     kapt 'com.google.auto.service:auto-service:1.0-rc4'
+    kapt "io.arrow-kt:arrow-annotations-processor:$metaArrowVersion"
 
     //To generate stubs for data classes
     kaptTest 'com.google.auto.service:auto-service:1.0-rc4'
