--- a/modules/docs/arrow-docs/build.gradle
+++ b/modules/docs/arrow-docs/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     compile "io.kotlintest:kotlintest:$kotlinTestVersion"
 
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion"
-    compile "io.reactivex.rxjava2:rxjava:2.1.13"
-    compile "io.projectreactor:reactor-core:3.1.3.RELEASE"
+    compile "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    compile "io.projectreactor:reactor-core:$projectReactorVersion"
 }
 
 task printcp {
