--- a/modules/effects/arrow-effects-reactor/build.gradle
+++ b/modules/effects/arrow-effects-reactor/build.gradle
@@ -10,8 +10,8 @@ dependencies {
     testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
     testCompile project(':arrow-test')
 
-    compile "io.projectreactor:reactor-core:3.1.3.RELEASE"
-    testCompile "io.projectreactor:reactor-test:3.1.3.RELEASE"
+    compile "io.projectreactor:reactor-core:$projectReactorVersion"
+    testCompile "io.projectreactor:reactor-test:$projectReactorVersion"
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
