--- a/modules/effects/arrow-effects/build.gradle
+++ b/modules/effects/arrow-effects/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile project(':arrow-data')
+    compile project(':arrow-typeclasses')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
     kapt project(':arrow-annotations-processor')
