Adding docs for Store and move function

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -98,6 +98,9 @@ options:
       - title: StateT
         url: /docs/datatypes/statet/
 
+      - title: Store
+        url: /docs/datatypes/store/
+
       - title: WriterT
         url: /docs/datatypes/writert/
 
