Adding docs for Sum

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -104,6 +104,9 @@ options:
       - title: Moore
         url: /docs/datatype/moore/
 
+      - title: Sum
+        url: /docs/datatype/sum/
+
       - title: WriterT
         url: /docs/datatypes/writert/
 
