Extensions over wrapped types working!

--- a/modules/docs/arrow-docs/build.gradle
+++ b/modules/docs/arrow-docs/build.gradle
@@ -11,12 +11,12 @@ dependencies {
     compile project(':arrow-data')
     compile project(':arrow-core')
     compile project(':arrow-instances-data')
-    compile project(':arrow-effects')
-    compile project(':arrow-effects-rx2')
-    compile project(':arrow-effects-reactor')
-    compile project(':arrow-effects-kotlinx-coroutines')
+    compile project(':arrow-effects-instances')
+    compile project(':arrow-effects-rx2-instances')
+    compile project(':arrow-effects-reactor-instances')
+    compile project(':arrow-effects-kotlinx-coroutines-instances')
     compile project(':arrow-optics')
-    compile project(':arrow-recursion')
+    compile project(':arrow-instances-recursion')
     compile project(':arrow-mtl')
     compile project(':arrow-free')
     compile project(':arrow-typeclasses')
