--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,9 @@ buildscript {
         gradleVersionsPluginVersion = '0.20.0'
         javaVersion = JavaVersion.VERSION_1_7
         kotlinTestVersion = '2.0.7'
-        kotlinVersion = '1.2.61'
+        kotlinVersion = '1.3.0-rc-190'
         daggerVersion = '2.17'
-        kotlinxCoroutinesVersion = '0.24.0'
+        kotlinxCoroutinesVersion = '0.30.2-eap13'
         kotlinxCollectionsImmutableVersion = '0.1'
         kotlinPoetVersion='1.0.0-RC1'
         projectReactorVersion='3.1.8.RELEASE'
