--- a/modules/core/arrow-data/build.gradle
+++ b/modules/core/arrow-data/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testCompile project(':arrow-free')
     testCompile project(':arrow-instances-free')
     testCompile project(':arrow-mtl')
+    testCompile project(':arrow-instances-mtl')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
