--- a/modules/integrations/arrow-integrations-retrofit-adapter/build.gradle
+++ b/modules/integrations/arrow-integrations-retrofit-adapter/build.gradle
@@ -2,6 +2,7 @@ def retrofitVersion = "2.4.0"
 
 dependencies {
     compile project(':arrow-effects')
+    compile project(':arrow-typeclasses')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -13,6 +14,8 @@ dependencies {
     testCompile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     testCompile 'com.squareup.okhttp3:mockwebserver:3.11.0'
     testCompile project(':arrow-effects-rx2')
+    testCompile project(':arrow-effects-rx2-instances')
+    testCompile project(':arrow-effects-instances')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
