--- a/modules/effects/arrow-effects-data/build.gradle
+++ b/modules/effects/arrow-effects-data/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     testCompileOnly project(':arrow-annotations-processor')
     testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
     testCompile project(':arrow-test')
+    testCompile project(':arrow-effects-instances')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
