Adding integration for Retrofit (#1037)
* adding retrofit adapter for arrow

* Fixing tests

* simple pr corrections

* small corrections in pr 2

* thinking about Response<R> or just R

* removing IO adapter and pr adjustments

* refactor to extension functions

* pr fix

* fixing modules and imports

* pr fixes

--- a/settings.gradle
+++ b/settings.gradle
@@ -65,6 +65,10 @@ include {
             _ 'effects-reactor-instances'
         }
 
+        integrations {
+            _ 'integrations-retrofit-adapter'
+        }
+
         folder('recursion-schemes') {
             _ 'recursion'
             _ 'instances-recursion'
