WIP prototype. The Arrow Query Language. The Arrow query language offers SQL, Monoid comprehensions and LINQ style queries generalized to all data types.

--- a/settings.gradle
+++ b/settings.gradle
@@ -98,5 +98,9 @@ include {
             _ 'ank'
             _ 'ank-gradle'
         }
+
+        aql {
+            _ 'query-language'
+        }
     }
 }
