--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -293,6 +293,34 @@ options:
       - title: Each
         url: /docs/optics/each/
 
+  - title: Λrrow Query Language
+
+    nested_options:
+
+      - title: Λrrow Query Language
+        url: /docs/aql/intro
+
+      - title: select
+        url: /docs/aql/select
+
+      - title: from
+        url: /docs/aql/from
+
+      - title: where
+        url: /docs/aql/where
+
+      - title: groupBy
+        url: /docs/aql/groupby
+
+      - title: orderBy
+        url: /docs/aql/groupby
+
+      - title: sum
+        url: /docs/aql/sum
+
+      - title: union
+        url: /docs/aql/union
+
   - title: Generic
     nested_options:
 
