--- a/settings.gradle
+++ b/settings.gradle
@@ -93,6 +93,10 @@ include {
         shadow {
             _ 'shadow'
         }
+        
+        streams {
+            _ 'streams'
+        }
 
         ank {
             _ 'ank'
