AQL initial DRAFT and docs

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -313,13 +313,16 @@ options:
         url: /docs/aql/groupby
 
       - title: orderBy
-        url: /docs/aql/groupby
+        url: /docs/aql/orderBy
 
       - title: sum
         url: /docs/aql/sum
 
       - title: union
         url: /docs/aql/union
+
+      - title: Custom Data Types
+        url: /docs/aql/custom
 
   - title: Generic
     nested_options:
