move KleisliBracketInstance to new data-instances-effects module

--- a/settings.gradle
+++ b/settings.gradle
@@ -57,6 +57,7 @@ include {
         effects {
             _ 'effects'
             _ 'effects-instances'
+            _ 'data-instances-effects'
             _ 'effects-rx2'
             _ 'effects-rx2-instances'
             _ 'effects-kotlinx-coroutines'
