--- a/modules/effects/arrow-data-instances-effects/build.gradle
+++ b/modules/effects/arrow-data-instances-effects/build.gradle
@@ -1,17 +1,15 @@
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
-    compile project(':arrow-typeclasses')
+    compile project(':arrow-instances-data')
+    compile project(':arrow-data')
+    compile project(':arrow-effects')
     kapt project(':arrow-annotations-processor')
     kaptTest project(':arrow-annotations-processor')
     compileOnly project(':arrow-annotations-processor')
     testCompileOnly project(':arrow-annotations-processor')
     testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
-    testCompile project(':arrow-syntax')
-    testCompile project(':arrow-instances-data')
     testCompile project(':arrow-test')
-    testCompile project(':arrow-mtl')
-    testCompile project(':arrow-data-instances-effects')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
