--- a/settings.gradle
+++ b/settings.gradle
@@ -102,5 +102,9 @@ include {
             _ 'ank'
             _ 'ank-gradle'
         }
+
+        aql {
+            _ 'query-language'
+        }
     }
 }
