--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -281,6 +281,9 @@ options:
       - title: Traversal
         url: /docs/optics/traversal/
 
+      - title: Snoc
+        url: /docs/optics/snoc/
+
       - title: At
         url: /docs/optics/at/
 
