Arrow Reflect init

--- a/settings.gradle
+++ b/settings.gradle
@@ -106,5 +106,9 @@ include {
         aql {
             _ 'query-language'
         }
+
+        reflect {
+            _ 'reflect'
+        }
     }
 }
