--- a/modules/effects/arrow-data-instances-effects/gradle.properties
+++ b/modules/effects/arrow-data-instances-effects/gradle.properties
@@ -1,4 +1,4 @@
 # Maven publishing configuration
-POM_NAME=Arrow Type Classes Effects Instances for data types in Data
+POM_NAME=Instances of arrow-effects for the datatypes in arrow-data
 POM_ARTIFACT_ID=arrow-data-instances-effects
 POM_PACKAGING=jar
