--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -15,6 +15,13 @@ options:
       - title: Projects & Examples
         url: /docs/quickstart/projects/
 
+  - title: API Docs
+
+    nested_options:
+
+      - title: arrow-core
+        url: /docs/apidocs/arrow-core/
+
   - title: Patterns
 
     nested_options:
