Add documentation for hash

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -234,6 +234,9 @@ options:
       - title: Alternative
         url: /docs/typeclasses/alternative/
 
+      - title: Hash
+        url: /docs/typeclasses/hash
+
   - title: Effects
 
     nested_options:
