--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -250,6 +250,9 @@ options:
       - title: Effect
         url: /docs/effects/effect/
 
+      - title: Promise
+        url: /docs/effects/promise/
+
       - title: Ref
         url: /docs/effects/ref/
 
