Update Try permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -112,7 +112,7 @@ options:
         url: /docs/arrow/core/either/
 
       - title: Try
-        url: /docs/datatypes/try/
+        url: /docs/arrow/core/try/
 
       - title: Validated
         url: /docs/datatypes/validated/
