Update ListK permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -121,7 +121,7 @@ options:
         url: /docs/arrow/data/nonemptylist/
 
       - title: ListK
-        url: /docs/datatypes/listk/
+        url: /docs/arrow/data/listk/
 
       - title: SequenceK
         url: /docs/datatypes/sequencek/
