Update SetK permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -127,7 +127,7 @@ options:
         url: /docs/arrow/data/sequencek/
 
       - title: SetK
-        url: /docs/datatypes/setk/
+        url: /docs/arrow/data/setk/
 
       - title: MapK
         url: /docs/datatypes/mapk/
