Update MapK permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -130,7 +130,7 @@ options:
         url: /docs/arrow/data/setk/
 
       - title: MapK
-        url: /docs/datatypes/mapk/
+        url: /docs/arrow/data/mapk/
 
       - title: SortedMapK
         url: /docs/datatypes/sortedmapk/
