Update Ior permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -136,7 +136,7 @@ options:
         url: /docs/arrow/data/sortedmapk/
 
       - title: Ior
-        url: /docs/datatypes/ior/
+        url: /docs/arrow/data/ior/
 
       - title: Id
         url: /docs/datatypes/id/
