--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -139,7 +139,7 @@ options:
         url: /docs/arrow/data/ior/
 
       - title: Id
-        url: /docs/datatypes/id/
+        url: /docs/arrow/core/id/
 
       - title: Reader
         url: /docs/datatypes/reader/
