Update Reader permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -142,7 +142,7 @@ options:
         url: /docs/arrow/core/id/
 
       - title: Reader
-        url: /docs/datatypes/reader/
+        url: /docs/arrow/data/reader/
 
       - title: Kleisli
         url: /docs/datatypes/kleisli/
