--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -148,10 +148,10 @@ options:
         url: /docs/arrow/data/kleisli/
 
       - title: State
-        url: /docs/datatypes/state/
+        url: /docs/arrow/data/state/
 
       - title: StateT
-        url: /docs/datatypes/statet/
+        url: /docs/arrow/data/statet/
 
       - title: Store
         url: /docs/datatypes/store/
