Update Store permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -154,7 +154,7 @@ options:
         url: /docs/arrow/data/statet/
 
       - title: Store
-        url: /docs/datatypes/store/
+        url: /docs/arrow/data/store/
 
       - title: Moore
         url: /docs/datatypes/moore/
