Update Moore permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -157,7 +157,7 @@ options:
         url: /docs/arrow/data/store/
 
       - title: Moore
-        url: /docs/datatypes/moore/
+        url: /docs/arrow/data/moore/
 
       - title: Sum
         url: /docs/datatypes/sum/
