--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -160,7 +160,7 @@ options:
         url: /docs/arrow/data/moore/
 
       - title: Sum
-        url: /docs/datatypes/sum/
+        url: /docs/arrow/data/moore/
 
       - title: Day
         url: /docs/datatypes/day/
