--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -163,7 +163,7 @@ options:
         url: /docs/arrow/data/moore/
 
       - title: Day
-        url: /docs/datatypes/day/
+        url: /docs/arrow/data/day/
 
       - title: WriterT
         url: /docs/datatypes/writert/
