Update Eval permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -175,7 +175,7 @@ options:
         url: /docs/arrow/data/coproduct/
 
       - title: Eval
-        url: /docs/datatypes/eval/
+        url: /docs/arrow/core/eval/
 
       - title: OptionT
         url: /docs/datatypes/optiont/
