Update Const permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -190,7 +190,7 @@ options:
         url: /docs/arrow/core/function1/
 
       - title: Const
-        url: /docs/datatypes/const/
+        url: /docs/arrow/typeclasses/const/
 
   - title: Type Classes
 
