Update Show permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -200,7 +200,7 @@ options:
         url: /docs/typeclasses/intro/
 
       - title: Show
-        url: /docs/typeclasses/show/
+        url: /docs/arrow/typeclasses/show/
 
       - title: Eq
         url: /docs/typeclasses/eq/
