Update Eq permalink to match class package
Previous permalink is added to redirect_from variable so it redirects to the new link
Update documentation internal links to match new link

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -203,7 +203,7 @@ options:
         url: /docs/arrow/typeclasses/show/
 
       - title: Eq
-        url: /docs/typeclasses/eq/
+        url: /docs/arrow/typeclasses/eq/
 
       - title: Hash
         url: /docs/typeclasses/hash
