--- a/.travis.yml
+++ b/.travis.yml
@@ -21,18 +21,20 @@ before_install:
 
 jobs:
   include:
-  - stage: run-ank
+  - stage: build-and-dokka
     script:
     # redirecting outputs to files to avoid exceeding travis' logs limit
     - ./gradlew clean build > build.log
     - ./gradlew dokka :arrow-docs:runAnk > run_ank.log
     - aws s3 sync modules/docs/arrow-docs/build/site s3://$S3_BUCKET/site > aws_sync_dokka.log
   - stage: deploy
+    if: branch = master
     script:
     - ./gradlew codeCoverageReport
     - bash <(curl -s https://codecov.io/bash)
     - ./deploy-scripts/deploy.sh
   - stage: deploy-docs
+    if: branch = master
     script:
     - rvm use 2.5.3 --install --fuzzy
     - gem install jekyll -v 3.7.4
